--- a/Comparisons.html
+++ b/Comparisons.html
@@ -53,42 +53,45 @@
 
                 </div><!-- /.container- -->
             </nav>
-	   
+	        
 	    <div class="content">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-12 col-md-8">
-                        <div class="box">
-                            <div class="header">
-                                <h1 class="title">Wind Speed</h1>
-                            </div>
-                            <div class="content">
-                               <img src="Resources/assets/images/Fig4.png" alt="Latitude vs. Wind Speed" class="img-responsive">
-	                           <p class="category">From City Latitude vs Wind Speed chart, we can tell most of cities are located in area with wind speed below 10mph. There is no city located in area with wind speed above 15mph. There is no direct relationship between wind speed and latitude.
-	                           </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-12 col-md-4">
-                        <div class="box">
-                            <div class="header">
-                                <h1 class="title">Visualizations</h1>
-                            </div>
-                            <div class="content">
-                                    <a href="VIS1_lat_vs_maxTemp.html"><img src="Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature" height="180" width="180"></a>
-                                    <a href="VIS2_lat_vs_humidity.html"><img src="Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity" height="180" width="180"></a>
-                                    <a href="VIS3_lat_vs_cloudiness.html"><img src="Resources/assets/images/Fig3.png" alt="Latitude vs. Cloudiness" height="180" width="180"></a>
-                                    <a href="VIS4_lat_vs_wind_speed.html"><img src="Resources/assets/images/Fig4.png" alt="Latitude vs. Wind Speed" height="180" width="180"></a>
-	                        </div>
-	                    </div>
-	                </div>
-	            </div>
+                	<div class="col-md-12">
+                		<div class="box">
+                    		<div class="header">
+                    			<h1 class="title">Comparison: Latitude vs. X</h1>
+	              				<p class="category">Click any plot to get in_depth analysis.</p>
+	              			</div>
+                    		<div class="content">
+                        		<div class="row">
+                        			<div class="col-xs-12 col-sm-12 col-md-6">
+	                					<h2>vs. Max Temperature</h2>
+	              						<a href="VIS1_lat_vs_maxTemp.html"><img class="img-fluid" src="Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature" height="500" width="500"></a>
+	           						</div>
+	           						<div class="col-xs-12 col-sm-12 col-md-6">
+	              						<h2>vs. Humidity</h2>
+	              						<a href="VIS2_lat_vs_humidity.html"><img class="img-fluid" src="Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity" height="500" width="500"></a>
+	           						</div>
+	            					<div class="col-xs-12 col-sm-12 col-md-6">
+	               						<h2>vs. Cloudiness</h2>
+	               						<a href="VIS3_lat_vs_cloudiness.html"><img class="img-fluid" src="Resources/assets/images/Fig3.png" alt="Latitude   vs. Cloudiness" height="500" width="500"></a>
+	            					</div>
+	            					<div class="col-xs-12 col-sm-12 col-md-6">
+	               						<h2>vs. Wind Speed</h2>
+								 		<a href="VIS4_lat_vs_wind_speed.html"><img class="img-fluid" src="Resources/assets/images/Fig4.png" alt="Latitude vs. Wind Speed" height="500" width="500"></a>
+									</div>	 
+                                  </div>
+	          				</div>
+	          			</div>
+					</div>
+				</div>
 			</div>
 		</div>
-    </div>
-    <footer class="text-center text-uppercase">Coding Bootcamp 2019</footer>
+	</div>
+	<footer class="text-center text-uppercase">Coding Bootcamp 2019</footer>
 </body>
+
         <!--   Core JS Files   -->
     <script src="assets/js/jquery.3.2.1.min.js" type="text/javascript"></script>
 	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
