--- a/VIS2_lat_vs_humidity.html
+++ b/VIS2_lat_vs_humidity.html
@@ -1,61 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="utf-8" />
-	<link rel="icon" type="image/png" href="assets/img/favicon.ico">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Visualization Dashboard</title>
+  <!--Bootstrap components-->
+  <link href="link_script/css/bootstrap.min.css" rel="stylesheet">
+  <!--jQuery-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!--cdnjs-->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
+  <!---->
+  <script src="link_script/js/bootstrap.min.js"></script>
+  <!--css style-->
+  <link rel="stylesheet" href="link_script/style.css">
+</head>
 
-    <title>Latitude vs. Humidity</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
-
-
-    <!-- Bootstrap core CSS     -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-    <link href="assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
-    <link rel="stylesheet" href="CSS/style.css">
-
-</head>	  
 <body>
-    <div class="container-fluid">
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
+
+        <nav class="navbar navbar-default">
+            <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html"><span class="latitude">Latitude</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls=" navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
                     </button>
-                </div>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <div class="dropdown">
-                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Plots
-                            <span class="caret"></span></button> 
-                            <ul class="dropdown-menu">
-                                <li><a href="VIS1_lat_vs_maxTemp.html">Latitude vs. Max Temperature</a></li>
-                                <li><a href="VIS2_lat_vs_humidity.html">Latitude vs. Humidity</a></li>
-                                <li><a href="VIS3_lat_vs_cloudiness.html">Latitude vs. Cloudiness</a></li>
-                                <li><a href="VIS4_lat_vs_wind_speed.html">Latitude vs. Wind Speed</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="Comparisons.html"><span class="c-d">Comparison</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="Data.html"><span class="c-d">Data</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+                    <a class="navbar-brand" href="index.html">Latitude</a>
+                </div><!--navbar-header-->      
+            
+                <!-- Collect the nav links and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            <!-- <li class="active"><a href="#">Link<span class="sr-only">(current)</span></a></li> -->
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plots <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="VIS1_lat_vs_maxTemp.html">Latitude vs. Max Temperature</a></li>
+                                    <li><a href="VIS2_lat_vs_humidity.html">Latitude vs. Humidity</a></li>
+                                    <li><a href="VIS3_lat_vs_cloudiness.html">Latitude vs. Cloudiness</a></li>
+                                    <li><a href="VIS4_lat_vs_wind_speed.html">Latitude vs. Wind Speed</a></li>
+                                </ul>
+                            </li><!--dropdown end-->
+                            <li><a class="nav-link" href="Comparisons.html">Comparison</a></li>
+                            <li><a class="nav-link" href="Data.html">Data</a></li>
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+
+                </div><!-- /.container- -->
+            </nav>
 	   
 	    <div class="content">
             <div class="container-fluid">
@@ -66,7 +63,7 @@
                                 <h1 class="title">Humidity</h1>
                             </div>
                             <div class="content">
-                               <img src="./output_data/Fig2.png" alt="Latitude vs. Humidity" class="img-responsive">
+                               <img src="Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity" class="img-responsive">
 	                           <p class="category">From City Latitude vs Humidity chart, it doesn’t look like any direct relationship between latitude and humidity. But apparently most of the cities are located in area with humidity over 60%. The reason is more people living the cities which require more water supply. So, cities are usually built by rivers, lakes, bay, or seashore. There are only very limited number of cities located in area with humidity below 20%.
 	                           </p>
                             </div>
@@ -79,17 +76,18 @@
                                 <h1 class="title">Visualizations</h1>
                             </div>
                             <div class="content">
-                               <a href="./visualization-image-1.html"><img src="./output_data/Fig1.png" alt="Latitude vs. Max Temperature" height="180" width="180"></a>
-	                           <a href="./visualization-image-2.html"><img src="./output_data/Fig2.png" alt="Latitude vs. Humidity" height="180" width="180"></a>
-	                           <a href="./visualization-image-3.html"><img src="./output_data/Fig3.png" alt="Latitude vs. Cloudiness" height="180" width="180"></a>
-	                           <a href="./visualization-image-4.html"><img src="./output_data/Fig4.png" alt="Latitude vs. Wind Speed" height="180" width="180"></a>
+                                    <a href="VIS1_lat_vs_maxTemp.html"><img src="Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature" height="180" width="180"></a>
+                                    <a href="VIS2_lat_vs_humidity.html"><img src="Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity" height="180" width="180"></a>
+                                    <a href="VIS3_lat_vs_cloudiness.html"><img src="Resources/assets/images/Fig3.png" alt="Latitude vs. Cloudiness" height="180" width="180"></a>
+                                    <a href="VIS4_lat_vs_wind_speed.html"><img src="Resources/assets/images/Fig4.png" alt="Latitude vs. Wind Speed" height="180" width="180"></a>
 	                        </div>
 	                    </div>
 	                </div>
 	            </div>
 			</div>
 		</div>
-	</div>
+    </div>
+    <footer class="text-center text-uppercase">Coding Bootcamp 2019</footer>
 </body>
         <!--   Core JS Files   -->
     <script src="assets/js/jquery.3.2.1.min.js" type="text/javascript"></script>
